--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  
+  <h1>とりあえず</h1>
 </body>
