サイトで出るバージョン

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>ついったー寿司</title>
 </head>
 
 <body>
-  <h1>とりあえず</h1>
+  <h1>ついったー寿司</h1>
+  <h3>これはツイッターで呟かれた魚等のネタ、寿司というツイートを</p>
+    実際にレーンに乗っけて動かしてみようというサイトである。</h3>
 </body>
